# finalproject

./: .gitignore  PROJECT_ANALYSIS.md  README.md  TempGuard.xmind  architecture.md  index.html  technical_requirements.md
docs/: fastAPI_Telemetry_Integration.md
firmware/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/main/: CMakeLists.txt  app_main.c  tasks_comms.c  tasks_comms.h  tasks_control.c  tasks_control.h  tasks_ota.c  tasks_ota.h  tasks_sensors.c  tasks_sensors.h  tasks_storage.c  tasks_storage.h  tasks_ui.c  tasks_ui.h
firmware/main/config/: defaults.json
firmware/main/core/: event_bus.c  event_bus.h  types.h
firmware/main/drivers/: drv_buzzer.c  drv_buzzer.h  drv_ds18b20.c  drv_ds18b20.h  drv_keys.c  drv_keys.h  drv_onewire.c  drv_onewire.h  drv_relay_uln2003.c  drv_relay_uln2003.h  drv_tm1637.c  drv_tm1637.h
web/: api.js  app.js  index.html  styles.css
